Corrected display of links on large screens. Tweaked comments and spacing.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -63,17 +63,6 @@ a, a:visited {
 	color: #fff;
 }
 
-@media (min-width: 992px) {
-  .fixed {
-    position: fixed;
-  }
-
-  .sub-header {
-    display: inline;
-  }
-}
-
-
 /* Header */
 header {
 	height: 87px;
@@ -158,5 +147,16 @@ h2 {
 
 #photos {
 	margin-left: 20px;
+}
+
+
+@media (min-width: 991px) {
+  .fixed {
+    position: fixed;
+  }
+
+  .sub-header {
+    display: inline;
+  }
 }
 
